changed centering procedure for surveys to fix jumping error.

--- a/mindful_attention_awareness_survey/style.css
+++ b/mindful_attention_awareness_survey/style.css
@@ -18,11 +18,18 @@
 }
 
 .mdl-cell--8-col, .mdl-cell--8-col-desktop.mdl-cell--8-col-desktop {
-	width: 1100px;
+  width: 1060px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mdl-cell--2-col, .mdl-cell--2-col-desktop.mdl-cell--2-col-desktop {
-  width: calc(13.5% - 16px)
+  width: calc(0%)
+}
+
+.wizard-step {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
