--- a/ten_item_personality_survey/style.css
+++ b/ten_item_personality_survey/style.css
@@ -19,12 +19,20 @@
 }
 
 .mdl-cell--8-col, .mdl-cell--8-col-desktop.mdl-cell--8-col-desktop {
-	width: 1400px;
+  width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mdl-cell--2-col, .mdl-cell--2-col-desktop.mdl-cell--2-col-desktop {
-  width: calc(6% - 16px)
+  width: calc(0%)
 }
+
+.wizard-step {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 body {
 	line-height: 25px;
