--- a/theories_of_willpower_survey/style.css
+++ b/theories_of_willpower_survey/style.css
@@ -31,12 +31,20 @@ p {
 }
 
 .mdl-cell--8-col, .mdl-cell--8-col-desktop.mdl-cell--8-col-desktop {
-	width: 1250px;
+  width: 1250px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mdl-cell--2-col, .mdl-cell--2-col-desktop.mdl-cell--2-col-desktop {
-  width: calc(10.5% - 16px)
+  width: calc(0%)
 }
+
+.wizard-step {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 /* Add gray line for Likert */
 
